--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <body>
     <h1>Group #10 Project Webpage</h1>
     <p>
-      We have not chosen a project yet, so there is not much to put here :(
-      (<em>Yet</em>)
+      Much Website Many Wow Such HTML :o
+      (<em>WIP</em>)
     </p>
   </body>
 </html>
