Added Project Subject

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     </style>
   </head>
   <body>
-    <h1>Group #10 Project Webpage</h1>
+    <h1>Group #10 Project: Smart-Lock</h1>
+    <!-- <h2>Our Proposal</h2> -->
     <p>
       Much Website Many Wow Such HTML :o
       (<em>WIP</em>)
