--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="shortcut icon" href="software.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="SmartLock_NoText_Logo_v2.png" type="image/png">
     <title>Project Webpage</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
