--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
     <style>
       body {
         color: rgb(60, 60, 60);
-        background-color: rgb(240, 240, 240);
+        background-color: rgb(37, 37, 47);
+      }
+      .centered {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
       }
     </style>
   </head>
-  <body>
-    <h1>Group #10 Project: Smart-Lock</h1>
-    <!-- <h2>Our Proposal</h2> -->
-    <p>
-      Much Website Many Wow Such HTML :o
-      (<em>WIP</em>)
-    </p>
-  </body>
+ 
+<img src="SmartLock_Logo_v2_HD.png" alt="SmartLock_Logo" class="centered" width="479px" height="389px">
+
 </html>
