--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="shortcut icon" href="SmartLock_NoText_Logo_v2.png" type="image/png">
-    <title>Project Webpage</title>
+    <title>Coming Soon...</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
