--- a/index.html
+++ b/index.html
@@ -6,15 +6,28 @@
   <title>Coming Soon...</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel ="stylesheet" href="styles.css">
+  <link rel ="stylesheet" href="css/styles.css">
+  <link rel ="stylesheet" href="css/sidebar.css">
+  <script class="cssdeck" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 </head>
- 
+
 <body>
-  <nav>
-    <span id="button-home">Home</span>
-    <span id="button-about">About Us</span>
-    <span>Contact</span>
-  </nav>
+    <div class="waves"></div>
+    <nav class="menu-activea">
+        <h1>Menu</h1>
+        <ul>
+          <li id="button-home">Home</li>
+          <li id="button-about">About</li>
+          <li>Placeholder</li>
+          <li>Placeholder</li>
+          <li>Placeholder</li>
+          <li>Placeholder</li>
+          <li>Placeholder</li>
+          <li>Placeholder</li>
+          <li>Placeholder</li>
+          <li>Placeholder</li>
+        </ul>
+      </nav>
   <main>
     <div id="section-home">
       <img src="SmartLock_Logo_v2_HD.png" alt="SmartLock_Logo" id="logo" class="centered" style="position: absolute; z-index: 1" width="300px" height="240px">
@@ -23,7 +36,7 @@
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </div>
   </main>
-  <script src="app.js"></script>
+  <script src="js/sidebar.js"></script><script src="js/bg.js"></script><script src="js/scripts.js"></script>
 </body>
 
 </html>
