--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
 </head>
 
 <body>
+
+    <div id="section-load">
+        <img src="SmartLock_Logo_v2_HD.png" alt="SmartLock_Logo" id="logo" class="centered" style="position: absolute; z-index: 1;" width="300px" height="240px">
+    </div>
+
     <div class="waves"></div>
+    <div id="button-load"></div>
+
     <nav class="menu-activea">
         <h1>Menu</h1>
         <ul>
@@ -25,17 +32,26 @@
           <li>Placeholder</li>
           <li>Placeholder</li>
           <li>Placeholder</li>
-          <li>Placeholder</li>
+          <li id="button-help">Help</li>
         </ul>
       </nav>
+
   <main>
-    <div id="section-home">
-      <img src="SmartLock_Logo_v2_HD.png" alt="SmartLock_Logo" id="logo" class="centered" style="position: absolute; z-index: 1" width="300px" height="240px">
+
+    <div id="section-home" class="hidden-section">
+      Placeholder text.
     </div>
+
     <div id="section-about" class="hidden-section">
+        <div class="card"> Hello World </div>
+    </div>
+
+    <div id="section-help" class="hidden-section">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </div>
+
   </main>
+
   <script src="js/sidebar.js"></script><script src="js/bg.js"></script><script src="js/scripts.js"></script>
 </body>
 
