Remove jquery, tidy HTML formatting, transition image fade

--- a/index.html
+++ b/index.html
@@ -2,57 +2,71 @@
 <html>
 
 <head>
-  <link rel="shortcut icon" href="SmartLock_NoText_Logo_v2.png" type="image/png">
-  <title>Coming Soon...</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Coming Soon...</title>
+  <link rel="shortcut icon" href="SmartLock_NoText_Logo_v2.png" type="image/png">
   <link rel ="stylesheet" href="css/styles.css">
   <link rel ="stylesheet" href="css/sidebar.css">
-  <script class="cssdeck" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 </head>
 
 <body>
 
-    <div id="section-load">
-        <img src="SmartLock_Logo_v2_HD.png" alt="SmartLock_Logo" id="logo" class="centered" style="position: absolute; z-index: 1;" width="300px" height="240px">
-    </div>
+  <div class="waves"></div>
+  <div id="button-load"></div>
 
-    <div class="waves"></div>
-    <div id="button-load"></div>
-
-    <nav class="menu-activea">
-        <h1>Menu</h1>
-        <ul>
-          <li id="button-home">Home</li>
-          <li id="button-about">About</li>
-          <li>Placeholder</li>
-          <li>Placeholder</li>
-          <li>Placeholder</li>
-          <li>Placeholder</li>
-          <li>Placeholder</li>
-          <li>Placeholder</li>
-          <li>Placeholder</li>
-          <li id="button-help">Help</li>
-        </ul>
-      </nav>
+  <nav id="main-menu" class="menu-activea">
+    <h1>Menu</h1>
+    <ul>
+      <li id="button-home">Home</li>
+      <li id="button-about">About</li>
+      <li>Placeholder</li>
+      <li>Placeholder</li>
+      <li>Placeholder</li>
+      <li>Placeholder</li>
+      <li>Placeholder</li>
+      <li>Placeholder</li>
+      <li>Placeholder</li>
+      <li id="button-help">Help</li>
+    </ul>
+  </nav>
 
   <main>
+    <img src="SmartLock_Logo_v2_HD.png" alt="SmartLock_Logo" id="logo" class="centered" width="300px" height="240px">
 
-    <div id="section-home" class="hidden-section">
-      Placeholder text.
-    </div>
+    <section id="section-home" class="hidden-section">
+      <h1>Home</h1>
+      <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+      occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+      mollit anim id est laborum.
+      </p>
+    </section>
 
-    <div id="section-about" class="hidden-section">
-        <div class="card"> Hello World </div>
-    </div>
+    <section id="section-about" class="hidden-section">
+      <div class="card">Hello World</div>
+    </section>
 
-    <div id="section-help" class="hidden-section">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </div>
+    <section id="section-help" class="hidden-section">
+      <h1>Help</h1>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+      occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+      mollit anim id est laborum.
+    </section>
 
   </main>
 
-  <script src="js/sidebar.js"></script><script src="js/bg.js"></script><script src="js/scripts.js"></script>
+  <script src="js/sidebar.js"></script>
+  <script src="js/bg.js"></script>
+  <script src="js/scripts.js"></script>
 </body>
 
 </html>
